# versa-forge

./: .dockerignore  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  out.md  output.md  pyproject.toml  pytest.ini  run.sh
app/: main.py
app/api/: dependencies.py  error_handlers.py  exception_handler.py
app/api/routes/: agent_files_router.py  agents.py  agents_router.py  auth_router.py  category_router.py  chat_router.py  user_router.py
app/core/: auth.py  config.py  debugger.py  exceptions.py  security.py
app/db/: database.py
app/db/engines/postgresql/: 2-create_db.sql  3-seed_data.sql
app/db/models/: database_models.py
app/db/schemas/: agent_file_schema.py  agent_schemas.py  category_schemas.py  file_schemas.py  group_schemas.py  token_schema.py  user_schemas.py
app/db/schemas/postgresql/: create_db.sql  postgresql_schema.sql
app/llm/: llm_manager.py  vector_store.py
app/llm/providers/: deepseek.py  llama.py  openai.py  vllm.py
app/schemas/: agent_files_schema.py  agent_schemas.py  category_schemas.py  group_schemas.py  token_schema.py  user_schemas.py
app/services/: agent_file_service.py  agent_service.py  categories_service.py  chat_service.py  user_service.py  vector_store_service.py
app/utils/: config.py  debugger.py
scripts/: collect_code_md.py
scripts/db/engines/postgresql/: 2-create_db.sql  3-seed_data.sql  4-reset_db.sql
tests/: conftest.py
tests/test_containers/: test_category_router.py
tests/test_containers/test_agent_router/: test_agent_creation.py
tests/test_containers/test_category_router/: test_create_category.py  test_delete_category.py  test_get_categories.py  test_get_category_by_id.py
tests/test_containers/test_user_router/: test_user_router.py
